# yogurt

./: Cargo.toml  PLAN.md  README.md
.github/workflows/: docs.yml
crates/yogurt-cli/: Cargo.toml
crates/yogurt-cli/src/: credentials.rs  graph_node.rs  ipfs.rs  main.rs  studio.rs
crates/yogurt-cli/src/commands/: auth.rs  build.rs  codegen.rs  deploy.rs  dev.rs  init.rs  inspect.rs  mod.rs  test.rs  validate.rs
crates/yogurt-cli/tests/: binary_compatibility.rs
crates/yogurt-codegen/: Cargo.toml
crates/yogurt-codegen/src/: abi.rs  error.rs  lib.rs  manifest.rs  schema.rs
crates/yogurt-macros/: Cargo.toml
crates/yogurt-macros/src/: lib.rs
crates/yogurt-runtime/: Cargo.toml
crates/yogurt-runtime/src/: allocator.rs  asc.rs  crypto.rs  data_source.rs  ens.rs  ethereum.rs  host.rs  ipfs.rs  json.rs  lib.rs  log.rs  store.rs  testing.rs  type_ids.rs  types.rs
docs/: book.toml
docs/book/: 404.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-762dd880.js  toc-bbfe76c5.js  toc.html
docs/book/deployment/: building.html  local.html  studio.html
docs/book/entities/: builders.html  crud.html  defining.html  relations.html
docs/book/getting-started/: installation.html  project-structure.html  quick-start.html
docs/book/handlers/: blocks.html  calls.html  events.html  file-data-sources.html  templates.html
docs/book/migration/: from-assemblyscript.html
docs/book/reference/: api.html  cli.html
docs/book/testing/: assertions.html  event-builder.html  mock-store.html  overview.html
docs/book/types/: bytes.html  core.html  id-macros.html  numbers.html  token-formatting.html
docs/src/: SUMMARY.md  introduction.md
docs/src/deployment/: building.md  local.md  studio.md
docs/src/entities/: builders.md  crud.md  defining.md  relations.md
docs/src/getting-started/: installation.md  project-structure.md  quick-start.md
docs/src/handlers/: blocks.md  calls.md  events.md  file-data-sources.md  templates.md
docs/src/migration/: from-assemblyscript.md
docs/src/reference/: api.md  cli.md
docs/src/testing/: assertions.md  event-builder.md  mock-store.md  overview.md
docs/src/types/: bytes.md  core.md  id-macros.md  numbers.md  token-formatting.md
scripts/: docker-compose.yml  test-deploy.sh  test-uniswap-v2.sh
tests/integration/erc20-transfer/: Cargo.toml  schema.graphql  subgraph.yaml
tests/integration/erc20-transfer/.cargo/: config.toml
tests/integration/erc20-transfer/abis/: ERC20.json
tests/integration/erc20-transfer/src/: lib.rs
tests/integration/erc20-transfer/src/mappings/: mod.rs
tests/integration/erc20-transfer/tests/: transfer_test.rs
tests/integration/uniswap-v2/: Cargo.toml  schema.graphql  subgraph.yaml
tests/integration/uniswap-v2/abis/: UniswapV2Factory.json  UniswapV2Pair.json
tests/integration/uniswap-v2/src/: lib.rs
tests/integration/uniswap-v2/src/mappings/: mod.rs
