[package]
name = "yogurt-codegen"
description = "Code generation for yogurt - schema and ABI to Rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
graphql-parser = { workspace = true }
alloy-json-abi = { workspace = true }
thiserror = { workspace = true }
