[package]
name = "erc20-transfer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
yogurt-runtime = { path = "../../../crates/yogurt-runtime" }
yogurt-macros = { path = "../../../crates/yogurt-macros" }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
