[package]
name = "uniswap-v2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
yogurt-runtime = { path = "../../../crates/yogurt-runtime" }
yogurt-macros = { path = "../../../crates/yogurt-macros" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
